repair job on mobile layout

--- a/src/components/pages/projects/styles.css
+++ b/src/components/pages/projects/styles.css
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 150px;
+  width: 150px;
   min-height: 100px;
   background-color: rgb(136, 236, 136);
   border-radius: 5px 5px 0 0;
@@ -145,7 +145,7 @@
 
 @media (max-width: 425px) {
   .projectCard {
-    width: 379px;
+    min-width: 379px;
   }
   .projectInfo {
     width: 185px;
@@ -156,10 +156,13 @@
     margin-right: 5px;
   }
   .projectInfo p {
-    font-size: 14px;
+    font-size: 12px;
     padding-right: 20px;
   }
   .projectDetails {
     width: 375px;
+  }
+  .projectDetails p {
+    font-size: 12px;
   }
 }
